# Smart-watch

./: .gitignore  AGENTS.md  README.md
App/ZSWatch/: CMakeLists.txt  app.overlay  prj.conf
App/ZSWatch/build_hci_ipc/: .ninja_log  CMakeCache.txt  build.ninja  build_info.yml  build_info.yml.bak  cmake_install.cmake  domains.yaml  generated_nrfutil_batch.json  hci_ipc_sysbuild_cache.txt  merged.hex  partitions.yml  pm.config  regions.yml  zephyr_modules.txt
App/ZSWatch/build_hci_ipc/Kconfig/: Kconfig.sysbuild.modules
App/ZSWatch/build_hci_ipc/_sysbuild/: autoconf.h  cmake_install.cmake
App/ZSWatch/build_hci_ipc/hci_ipc/: .ninja_deps  .ninja_log  CMakeCache.tmp  build.ninja  build_info.yml  cmake_install.cmake  compile_commands.json  sysbuild_modules.txt
App/ZSWatch/build_hci_ipc/zephyr/: .config  snippets_generated.cmake
App/ZSWatch/docs/: README.md  acheminement-flux.md  controller.md  model.md  projet-global.md  vue.md
App/ZSWatch/src/: activity.c  activity.h  altimeter.c  altimeter.h  ble.c  ble.h  ble_service.c  ble_service.h  calories.c  compass.c  compass.h  distance.c  distance.h  env_sensor.c  fall_detector.c  floor_counter.c  fusion.c  fusion.h  mag_sensor.c  mag_sensor.h  main.c  motion_sensor.c  motion_sensor.h  step_counter.c  step_counter.h  weather.h
App/ZSWatch/src/ble/: ble_service.c  ble_service.h
App/ZSWatch/src/input/: buttons.c  buttons.h
App/ZSWatch/src/processing/: activity.h  altimeter.c  calories.c  calories.h  compass.c  distance.c  distance.h  fall_detector.h  floor_counter.c  floor_counter.h  fusion.c  step_counter.c  weather.c  weather.h
App/ZSWatch/src/rtc/: rtc.c  rtc.h
App/ZSWatch/src/sensors/: env_sensor.h  rtc.c  rtc.h
App/ZSWatch/src/thread/: ble_thread.c  ble_thread.h  console_thread.c  console_thread.h  data_init_thread.c  data_init_thread.h  power_thread.c  power_thread.h  processing_thread.c  processing_thread.h  rtc_thread.h  sampling_thread.c  sampling_thread.h  sensor_thread.c  sensor_thread.h  shared_data.c  shared_data.h  sleep_thread.c  sleep_thread.h  ui_thread.c  ui_thread.h
App/ZSWatch/src/ui/: CMakeLists.txt  README.md  filelist.txt  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
(+229 files in other folders)
